fixed not clickable header buttons on small width

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -52,6 +52,7 @@
 }
 
 #loggedUserInfo {
+  pointer-events: none;
   position: absolute;
   left: 0;
   right: 0;
